--- a/Other/CSVTest/CSVHelper.csproj
+++ b/Other/CSVTest/CSVHelper.csproj
@@ -68,7 +68,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetCSVData.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="CsvHelpers.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
